# yadirect-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  agent_policy.example.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: ARCHITECTURE.md  BACKLOG.md  BRIEF.md  CLAUDE_DESKTOP.md  CODING_RULES.md  OPERATING.md  PRIOR_ART.md  REVIEW.md  SESSION_HANDOFF.md  TECHNICAL_SPEC.md  TESTING.md
src/yadirect_agent/: __init__.py  audit.py  config.py  exceptions.py  logging.py  rollout.py
src/yadirect_agent/agent/: __init__.py  cost.py  executor.py  loop.py  pipeline.py  plans.py  prompts.py  rationale_store.py  safety.py  tools.py
src/yadirect_agent/auth/: __init__.py  callback_server.py  keychain.py  login_flow.py  telegram_keychain.py
src/yadirect_agent/cli/: __init__.py  auth.py  cost.py  doctor.py  health.py  install.py  main.py  notify_setup.py  rationale.py
src/yadirect_agent/clients/: __init__.py  _token_refresh.py  base.py  direct.py  metrika.py  oauth.py  wordstat.py
src/yadirect_agent/mcp/: __init__.py  server.py
src/yadirect_agent/models/: __init__.py  auth.py  business_profile.py  campaigns.py  cost.py  health.py  health_history.py  keywords.py  metrika.py  notification.py  rationale.py
src/yadirect_agent/services/: __init__.py  bidding.py  business_profile_store.py  campaigns.py  cost_budget.py  health_check.py  health_history_store.py  policy_proposal.py  reporting.py  semantics.py
src/yadirect_agent/services/notify/: __init__.py  bot_api.py  dispatcher.py  protocol.py  render.py  setup_wizard.py  telegram.py
src/yadirect_agent/services/scheduler/: __init__.py  linux.py  macos.py  windows.py
tests/acceptance/: README.md  test_anna_journey.py
tests/evals/: README.md  conftest.py  harness.py  test_confirm_path_bid_change.py  test_pause_low_ctr.py  test_safety_reject_budget_cap.py
tests/unit/: conftest.py  test_audit.py  test_config.py  test_config_keyring_fallback.py  test_config_telegram_keyring_fallback.py  test_rollout.py
tests/unit/agent/: conftest.py  test_cost.py  test_executor.py  test_executor_rationale.py  test_loop.py  test_loop_budget.py  test_loop_cost.py  test_pipeline.py  test_plans.py  test_prompts.py  test_rationale_store.py  test_safety.py  test_tools.py
tests/unit/auth/: test_callback_server.py  test_keychain.py  test_login_flow.py  test_telegram_keychain.py
tests/unit/cli/: test_auth.py  test_cli.py  test_doctor.py  test_health.py  test_install.py  test_install_cmd.py  test_notify_setup_cli.py  test_rationale_cli.py  test_schedule.py
tests/unit/clients/: test_base.py  test_direct.py  test_metrika.py  test_oauth.py  test_token_refresh.py
tests/unit/mcp/: test_server.py
tests/unit/models/: test_auth.py  test_business_profile.py  test_campaigns.py  test_cost.py  test_health.py  test_keywords.py  test_metrika.py  test_rationale.py
tests/unit/services/: test_bidding.py  test_business_profile_store.py  test_campaigns.py  test_cost_budget.py  test_health_check.py  test_health_history_store.py  test_notify_dispatcher.py  test_notify_render.py  test_notify_setup_wizard.py  test_notify_telegram.py  test_policy_proposal.py  test_reporting.py  test_semantics.py
tests/unit/services/scheduler/: test_linux.py  test_macos.py  test_windows.py
