[project]
name = "yadirect-agent"
version = "0.1.0"
description = "Autonomous agent for Yandex Direct & Metrika management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "You" }]

dependencies = [
    # HTTP
    "httpx>=0.27",
    "tenacity>=9.0",                # retry with exp backoff
    # Config / validation
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    # Logging
    "structlog>=24.4",
    # CLI / agent
    "anthropic>=0.39",              # Claude SDK with tool use
    "typer>=0.12",                  # CLI framework
    "rich>=13.7",                   # pretty output
    # MCP
    "mcp>=1.0",                     # official MCP SDK
    # Utilities
    "tldextract>=5.1",              # domain extraction for seeds
    "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-vcr>=1.0.2",
    "respx>=0.21",                  # httpx mocking
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=4.0",              # git hooks for ruff/mypy/hygiene
    "types-python-slugify",
]

[project.scripts]
# Two entrypoints — shared core, two adapters
yadirect-mcp = "yadirect_agent.mcp_server.server:main"
yadirect-agent = "yadirect_agent.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yadirect_agent"]

# ---------- tooling ----------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "ASYNC", "S"]
ignore = ["S101"]                   # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "D"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
