[project]
name = "yadirect-agent"
version = "0.1.0"
description = "Autonomous agent for Yandex Direct & Metrika management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "You" }]

dependencies = [
    # HTTP
    "httpx>=0.27",
    "tenacity>=9.0",                # retry with exp backoff
    # Config / validation
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    # Logging
    "structlog>=24.4",
    # CLI / agent
    "anthropic>=0.39",              # Claude SDK with tool use
    "typer>=0.12",                  # CLI framework
    "rich>=13.7",                   # pretty output
    # MCP
    "mcp>=1.0",                     # official MCP SDK
    # Config files
    "pyyaml>=6.0",                  # agent_policy.yml parsing (M2 safety layer)
    # Utilities
    "tldextract>=5.1",              # domain extraction for seeds
    "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-vcr>=1.0.2",
    "pytest-cov>=5.0",              # coverage measurement + --cov-fail-under gate
    "pytest-randomly>=3.15",        # shuffles test order each run; catches hidden deps
    "pytest-timeout>=2.3",          # hard per-test timeout so hangs fail fast
    "respx>=0.21",                  # httpx mocking
    "ruff==0.15.11",                # pinned exact — see docs/TESTING.md on version skew
    "mypy>=1.11",
    "pre-commit>=4.0",              # git hooks for ruff/mypy/hygiene
    "types-python-slugify",
    "types-pyyaml",
]

[project.scripts]
# Two entrypoints — shared core, two adapters
yadirect-mcp = "yadirect_agent.mcp_server.server:main"
yadirect-agent = "yadirect_agent.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yadirect_agent"]

# ---------- tooling ----------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "ASYNC", "S"]
ignore = ["S101"]                   # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "D"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Hard limit per test — a hung async test (missing event, forgotten release)
# should surface as a red test, not a multi-minute wait. 10s is chosen so
# a real retry chain (5x wait_random_exponential up to 30s) fits in the
# worst reasonable case while still catching actual hangs. Override with
# `@pytest.mark.timeout(N)` if a test legitimately needs longer.
timeout = 10
# Seed pytest-randomly to keep a given CI run reproducible; the plugin
# still rotates the seed by default across runs.
# addopts is kept empty here so `make check` and `make test-cov` can
# opt into coverage explicitly — keeps `pytest -q` fast for local iteration.
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["src/yadirect_agent"]
# pyc/cache folders are not measured; __init__.py re-exports and CLI entry
# trivia are intentionally excluded to keep the signal strong.
omit = [
    "src/yadirect_agent/__init__.py",
    "src/yadirect_agent/*/__init__.py",
    "src/yadirect_agent/cli/main.py",  # thin typer adapter; covered via smoke tests only
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",                    # bare `...` in Protocol stubs
]
